--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -13,7 +13,7 @@
             <header>
               <a href="https://www.epam.com/" target="_blank"><img src="EPAM_logo.svg" alt="logo"></a>
               <nav>
-                <a href="#html-elements">HTML</a>
+                <a href="#html-elements"><strong>HTML</strong></a>
                 <a href="#list">List</a>
                 <a href="#table">Table</a>
                 <a href="#text-formats">Text formats</a>
