--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -14,10 +14,10 @@
               <a href="https://www.epam.com/" target="_blank"><img src="EPAM_logo.svg" alt="logo"></a>
               <nav>
                 <a href="#html-elements"><strong>HTML</strong></a>
-                <a href="#list">List</a>
-                <a href="#table">Table</a>
-                <a href="#text-formats">Text formats</a>
-                <a href="#blockquotes">Blockquotes</a>
+                <a href="#list"><strong>List</strong></a>
+                <a href="#table"><strong>Table</strong></a>
+                <a href="#text-formats"><strong>Text formats</strong></a>
+                <a href="#blockquotes"><strong>Blockquotes</strong></a>
               </nav>
             </header>
             <section>
