--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -16,7 +16,7 @@
                 <a href="#"><strong>HTML</strong></a>
                 <a href="#List"><strong>List</strong></a>
                 <a href="#Table"><strong>Table</strong></a>
-                <a href="#Text_formats"><strong>Text_formats</strong></a>
+                <a href="#Text_formats"><strong>Text formats</strong></a>
                 <a href="#Blockquotes"><strong>Blockquotes</strong></a>
               </nav>
             </header>
