--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -129,7 +129,7 @@ both           spaces and
               <h2 id="Blockquotes">Blockquotes</h2>
               <p>Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
               <blockquote>Technology is nothing. What's important is that you have a faith in people, that they're basically good and smart, and if you give them tools, they'll do wonderful things with them.
-                <br><a href="#" target="_top">Steve Jobs</a>
+                <br><a href="https://en.wikipedia.org/wiki/Steve_Jobs" target="_blank">Steve Jobs</a>
               </blockquote>
               <p hidden>And here’s a bit of trailing text.</p>
             </section>
