--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -117,8 +117,7 @@ both           spaces and
               </pre>
               <h3>Code</h3>
               <pre>
-                <code>
-.wrapper { 
+                <code>.wrapper { 
   display: grid; 
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px; 
